[gd_scene load_steps=7 format=3 uid="uid://b50eo3d735x12"]

[ext_resource type="PackedScene" uid="uid://tqnkpcyhy8g" path="res://Scenes/Game/Activities/Glasses_Cups_Bottles.tscn" id="1_r3hcx"]
[ext_resource type="Script" path="res://Scenes/Game/drink_building.gd" id="1_y4faq"]
[ext_resource type="PackedScene" uid="uid://b2i1bkjfm3q5d" path="res://Scenes/Game/Activities/Ice_Machine.tscn" id="2_dmqd3"]
[ext_resource type="PackedScene" uid="uid://01glyyjjfhfy" path="res://Scenes/Game/Activities/Soda_Machine.tscn" id="3_qrcsg"]
[ext_resource type="PackedScene" uid="uid://dxkplfexiykb6" path="res://Scenes/Game/Activities/Straw_Selection.tscn" id="4_xnmnc"]
[ext_resource type="PackedScene" uid="uid://bd6ilyoqex07l" path="res://Scenes/Game/Activities/User_Drink.tscn" id="6_683gw"]

[node name="DrinkBuilding" type="Node2D"]
script = ExtResource("1_y4faq")

[node name="GlassesCupsBottles" parent="." instance=ExtResource("1_r3hcx")]

[node name="SodaMachine" parent="." instance=ExtResource("3_qrcsg")]
visible = false

[node name="IceMachine" parent="." instance=ExtResource("2_dmqd3")]
visible = false

[node name="StrawSelection" parent="." instance=ExtResource("4_xnmnc")]
visible = false

[node name="UserDrink" parent="." instance=ExtResource("6_683gw")]
position = Vector2(830, 992)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NextActivityBtn" type="Button" parent="CanvasLayer"]
offset_left = 1684.0
offset_top = 1179.0
offset_right = 1726.0
offset_bottom = 1222.0
text = ">"
metadata/_edit_use_anchors_ = true

[node name="ServeDrinkBtn" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 1662.0
offset_top = 1181.0
offset_right = 1724.0
offset_bottom = 1220.0
text = "serve!"

[connection signal="pressed" from="GlassesCupsBottles/WideGlassBtn" to="." method="_on_wide_glass_btn_pressed"]
[connection signal="pressed" from="GlassesCupsBottles/TallGlassBtn" to="." method="_on_tall_glass_btn_pressed"]
[connection signal="pressed" from="GlassesCupsBottles/SundaeGlassBtn" to="." method="_on_sundae_glass_btn_pressed"]
[connection signal="pressed" from="GlassesCupsBottles/MilkshakeGlassBtn" to="." method="_on_milkshake_glass_btn_pressed"]
[connection signal="pressed" from="SodaMachine/KelpBtn" to="." method="_on_kelp_btn_pressed"]
[connection signal="pressed" from="SodaMachine/SarsaBtn" to="." method="_on_sarsa_btn_pressed"]
[connection signal="pressed" from="SodaMachine/MolluskBtn" to="." method="_on_mollusk_btn_pressed"]
[connection signal="pressed" from="SodaMachine/LPBtn" to="." method="_on_lp_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/NextActivityBtn" to="." method="_on_next_activity_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/ServeDrinkBtn" to="." method="_on_serve_drink_btn_pressed"]

[editable path="GlassesCupsBottles"]
[editable path="SodaMachine"]
[editable path="IceMachine"]
